syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";

message MaterialContainerTypeInfo{
    string id=1;
    //编号
    string code=2;
    //描述
    string description=3;
    //长(mm)
    int64 length=4;
    //宽(mm)
    int64 width=5;
    //高(mm)
    int64 height=6;
    //限重(kg)
    float weightLimit=7;
    //限高(mm)
    int64 heightLimit=8;
    //备注
    string remark=9;
}

message QueryMaterialContainerTypeRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // 代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryMaterialContainerTypeResponse{
    Code code=1;
    string message=2;
    repeated MaterialContainerTypeInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialContainerTypeResponse{
    Code code=1;
    string message=2;
    repeated MaterialContainerTypeInfo data=3;
}

message GetMaterialContainerTypeDetailResponse{
    Code code=1;
    string message=2;
    MaterialContainerTypeInfo data=3;
}